add a _custom.scss file

--- a/emails/src/assets/scss/app.scss
+++ b/emails/src/assets/scss/app.scss
@@ -1,4 +1,6 @@
-@import 'settings';
-@import 'foundation-emails';
+@import
+'settings',
+'foundation-emails',
 
-@import 'template/template';
+'template/template',
+'custom';
