--- a/emails/src/assets/scss/_custom.scss
+++ b/emails/src/assets/scss/_custom.scss
@@ -5,3 +5,26 @@
 .message {
 	padding-left: 30px;
 }
+
+.btn {
+	color: #FF0000;
+}
+hr.divider {
+	border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+.body small {
+	color: #999999;
+	font-size: 12px;
+	a {
+		color: #999999;
+		text-decoration: underline;
+	}
+}
+
+.body .logo {
+	width: 50px;
+	height: 50px;
+}
